--- a/public/assets/libs/bootstrap-editable/css/bootstrap-editable.css
+++ b/public/assets/libs/bootstrap-editable/css/bootstrap-editable.css
@@ -25,8 +25,8 @@
    vertical-align: top;
    margin-left: 7px;
    /* inline-block emulation for IE7*/
-   zoom: 1; 
-   *display: inline;
+   /* zoom: 1;  */
+   /* *display: inline; */
 }
 
 .editable-buttons.editable-buttons-bottom {
@@ -41,8 +41,8 @@
     width: auto; /* bootstrap-responsive has width: 100% that breakes layout */
     white-space: normal; /* reset white-space decalred in parent*/
    /* display-inline emulation for IE7*/
-   zoom: 1; 
-   *display: inline;   
+   /* zoom: 1; 
+   *display: inline;    */
 }
 
 .editable-buttons .editable-cancel {
@@ -158,8 +158,8 @@
     vertical-align: middle;
     width: auto;
     /* inline-block emulation for IE7*/
-    zoom: 1; 
-    *display: inline;    
+    /* zoom: 1; 
+    *display: inline;     */
 }
 
 .editable-container.ui-widget {
