--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,7 +17,6 @@ body {
   text-transform: capitalize;
   outline: none; border:none;
   text-decoration: none;
-  transition: all .2s linear;
 }
 
 
@@ -578,6 +577,7 @@ header .search-bar-container label:hover{
   overflow: hidden;
   height: 500px;
   align-items: center;
+  padding: 20px;
 }
 
 .video-1 {
